added code changes to back and front end