@@ -20,6 +20,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Stream;
 
@@ -60,669 +61,656 @@ class TransactionCategoryBuilderTest {
         testBudgetPeriod = new BudgetPeriod(Period.MONTHLY, LocalDate.of(2024, 5, 1), LocalDate.of(2024, 6, 1));
     }
 
+//   @Test
+//   void testCreateCategoryPeriod_whenEndDateIsNull_thenThrowException() {
+//        assertThrows(IllegalArgumentException.class, () -> {
+//            budgetCategoryBuilder.createCategoryPeriods("Groceries", LocalDate.of(2024, 6, 1), null, Period.WEEKLY,new ArrayList<>());
+//        });
+//   }
+
    @Test
-   void testCreateCategoryPeriod_whenEndDateIsNull_thenThrowException() {
-        assertThrows(IllegalArgumentException.class, () -> {
-            budgetCategoryBuilder.createCategoryPeriods("Groceries", LocalDate.of(2024, 6, 1), null, Period.WEEKLY,new ArrayList<>());
-        });
+   void testBuildDateRanges_WhenBudgetStartIsNull_thenReturnEmptyList(){
+        LocalDate budgetEnd = LocalDate.of(2024, 6, 8);
+        Period period = Period.MONTHLY;
+
+        List<DateRange> actual = budgetCategoryBuilder.buildBudgetDateRanges(null, budgetEnd, period);
+        assertEquals(0, actual.size());
+        assertTrue(actual.isEmpty());
    }
 
    @Test
-   void testCreateCategoryPeriod_whenTransactionListIsEmpty_thenReturnDefaultCategoryPeriod() {
-        LocalDate startDate = LocalDate.of(2024, 6, 1);
-        LocalDate endDate = LocalDate.of(2024, 6, 30);
-        List<Transaction> transactionList = new ArrayList<>();
+   void testBuildDateRanges_whenBudgetEndIsNull_thenReturnEmptyList(){
+       LocalDate budgetStart = LocalDate.of(2024, 6, 8);
+       Period period = Period.MONTHLY;
 
-        DateRange expected = new DateRange(startDate, endDate);
-        Map<String, List<DateRange>> actual = budgetCategoryBuilder.createCategoryPeriods("Groceries", startDate, endDate, Period.WEEKLY, transactionList);
-
+       List<DateRange> actual = budgetCategoryBuilder.buildBudgetDateRanges(budgetStart,null, period);
+       assertEquals(0, actual.size());
+       assertTrue(actual.isEmpty());
    }
 
    @Test
-   void testCreateCategoryPeriod_whenTransactionListAndStartDateAndEndDateIsNotNull_thenReturnDateRange(){
-        LocalDate budgetStartDate = LocalDate.of(2024, 9, 5);
-        LocalDate budgetEndDate = LocalDate.of(2025, 9, 6);
-        LocalDate startDate = LocalDate.of(2024, 11, 1);
-        LocalDate endDate = LocalDate.of(2025, 11, 8);
-        List<Transaction> transactionList = new ArrayList<>();
-        transactionList.add(createWalmartTransaction());
-        transactionList.add(createWincoTransaction());
-        transactionList.add(createAffirmTransaction());
-        transactionList.add(createGasTransaction());
-        DateRange expected = new DateRange(startDate, endDate);
-        Map<String, List<DateRange>> actual = budgetCategoryBuilder.createCategoryPeriods("Groceries", budgetStartDate, budgetEndDate, Period.WEEKLY, transactionList);
-        assertEquals(expected.getStartDate(), actual.get(expected.getStartDate()).get(0).getStartDate());
-        assertEquals(expected.getEndDate(), actual.get(expected.getEndDate()).get(0).getEndDate());
+   void testBuildDateRanges_whenPeriodIsNull_thenReturnEmptyList(){
+       LocalDate budgetStart = LocalDate.of(2024, 6, 8);
+       LocalDate budgetEnd = LocalDate.of(2024, 6, 15);
+       Period period = Period.MONTHLY;
+
+       List<DateRange> actual = budgetCategoryBuilder.buildBudgetDateRanges(budgetStart,budgetEnd, null);
+       assertEquals(0, actual.size());
+       assertTrue(actual.isEmpty());
    }
 
-    @ParameterizedTest
-    @MethodSource("provideTransactions")
-    @DisplayName("Test createCategoryPeriod with a month of transactions for various categories")
-    void testCreateCategoryPeriodWithGroceriesCategory(List<Transaction> transactions) {
-        String categoryName = "Groceries";
+   @Test
+   void testBuildDateRanges_whenTransactionListIsNull_thenReturnEmptyList(){
+        LocalDate budgetStart = LocalDate.of(2024, 6, 8);
+        LocalDate budgetEnd = LocalDate.of(2024, 6, 15);
+        Period period = Period.MONTHLY;
 
-        final LocalDate BUDGET_START_DATE = LocalDate.of(2024, 9, 1);
-        final LocalDate BUDGET_END_DATE = LocalDate.of(2024, 9, 30);
+        List<DateRange> dateRanges = budgetCategoryBuilder.buildBudgetDateRanges(budgetStart, budgetEnd, period);
+        assertEquals(0, dateRanges.size());
+        assertTrue(dateRanges.isEmpty());
+   }
 
-        // Call the method under test
-        Map<String, List<DateRange>> result = budgetCategoryBuilder.createCategoryPeriods(categoryName, BUDGET_START_DATE, BUDGET_END_DATE, Period.WEEKLY, transactions);
+    /**
+     * When Budget StartDate is Equal to Budget end date, then recalculate the end date to be one month out
+     */
+   @Test
+   void testBuildDateRanges_whenBudgetStartDateIsEqualToBudgetEndDate_thenReturnDateRangeList(){
+        LocalDate budgetStart = LocalDate.of(2024, 11, 1);
+        LocalDate budgetEnd = budgetStart;
+        Period period = Period.WEEKLY;
 
-        // Expected start and end dates for the "Groceries" category in September
-        List<DateRange> expectedWeeklyRanges = List.of(
-                new DateRange(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8)),
-                new DateRange(LocalDate.of(2024, 9, 8), LocalDate.of(2024, 9, 15)),
-                new DateRange(LocalDate.of(2024, 9, 15), LocalDate.of(2024, 9, 22)),
-                new DateRange(LocalDate.of(2024, 9, 22), LocalDate.of(2024, 9, 30))
-//                new DateRange(LocalDate.of(2024, 9, 29), LocalDate.of(2024, 9, 30)) // Partial week if only days 29-30 have transactions
+        List<DateRange> expectedDateRanges = new ArrayList<>();
+        expectedDateRanges.add(new DateRange(LocalDate.of(2024, 11, 1), LocalDate.of(2024, 11, 8)));
+        expectedDateRanges.add(new DateRange(LocalDate.of(2024, 11, 8), LocalDate.of(2024, 11, 15)));
+        expectedDateRanges.add(new DateRange(LocalDate.of(2024, 11, 15), LocalDate.of(2024, 11, 22)));
+        expectedDateRanges.add(new DateRange(LocalDate.of(2024, 11, 22), LocalDate.of(2024, 11, 29)));
+        expectedDateRanges.add(new DateRange(LocalDate.of(2024, 11, 29), LocalDate.of(2024, 12, 1)));
+
+        List<DateRange> actual = budgetCategoryBuilder.buildBudgetDateRanges(budgetStart, budgetEnd, period);
+        assertEquals(expectedDateRanges.size(), actual.size());
+        for(int i = 0; i < expectedDateRanges.size(); i++){
+            assertEquals(expectedDateRanges.get(i).getStartDate(), actual.get(i).getStartDate());
+            assertEquals(expectedDateRanges.get(i).getEndDate(), actual.get(i).getEndDate());
+        }
+   }
+
+   @Test
+   void testBuildDateRanges_whenBudgetStartDateIsNotEqualToBudgetEndDate_thenReturnDateRangeList(){
+       LocalDate budgetStart = LocalDate.of(2024, 11, 1);
+       LocalDate budgetEnd = LocalDate.of(2024, 11, 30);
+       Period period = Period.WEEKLY;
+
+       List<DateRange> expectedDateRanges = new ArrayList<>();
+       expectedDateRanges.add(new DateRange(LocalDate.of(2024, 11, 1), LocalDate.of(2024, 11, 8)));
+       expectedDateRanges.add(new DateRange(LocalDate.of(2024, 11, 8), LocalDate.of(2024, 11, 15)));
+       expectedDateRanges.add(new DateRange(LocalDate.of(2024, 11, 15), LocalDate.of(2024, 11, 22)));
+       expectedDateRanges.add(new DateRange(LocalDate.of(2024, 11, 22), LocalDate.of(2024, 11, 29)));
+       expectedDateRanges.add(new DateRange(LocalDate.of(2024, 11, 29), LocalDate.of(2024, 11, 30)));
+
+       List<DateRange> actual = budgetCategoryBuilder.buildBudgetDateRanges(budgetStart, budgetEnd, period);
+       assertEquals(expectedDateRanges.size(), actual.size());
+       for(int i = 0; i < expectedDateRanges.size(); i++){
+           assertEquals(expectedDateRanges.get(i).getStartDate(), actual.get(i).getStartDate());
+           assertEquals(expectedDateRanges.get(i).getEndDate(), actual.get(i).getEndDate());
+       }
+   }
+
+   @Test
+   void testBuildDateRanges_whenBudgetPeriodIsBiWeekly_thenReturnDateRangeList(){
+       LocalDate budgetStart = LocalDate.of(2024, 11, 1);
+       LocalDate budgetEnd = LocalDate.of(2024, 11, 30);
+       Period period = Period.BIWEEKLY;
+       List<DateRange> expectedDateRanges = new ArrayList<>();
+       expectedDateRanges.add(new DateRange(LocalDate.of(2024, 11, 1), LocalDate.of(2024, 11, 15)));
+       expectedDateRanges.add(new DateRange(LocalDate.of(2024, 11, 15), LocalDate.of(2024, 11, 29)));
+       expectedDateRanges.add(new DateRange(LocalDate.of(2024, 11, 29), LocalDate.of(2024, 11, 30)));
+       List<DateRange> actual = budgetCategoryBuilder.buildBudgetDateRanges(budgetStart, budgetEnd, period);
+       assertEquals(expectedDateRanges.size(), actual.size());
+       for(int i = 0; i < expectedDateRanges.size(); i++){
+           assertEquals(expectedDateRanges.get(i).getStartDate(), actual.get(i).getStartDate());
+           assertEquals(expectedDateRanges.get(i).getEndDate(), actual.get(i).getEndDate());
+       }
+   }
+
+
+
+    @Test
+    void testCreateCategoryPeriods_withSpecificTransactionExample() {
+        // Setup dates
+        LocalDate budgetStart = LocalDate.of(2024, 11, 1);
+        LocalDate budgetEnd = LocalDate.of(2024, 11, 30);
+        Period period = Period.WEEKLY;
+
+        // Create grocery transactions
+        List<Transaction> groceryTransactions = List.of(
+                new Transaction("acc1", new BigDecimal("34.32"), "USD", List.of("Groceries"), "cat1",
+                        LocalDate.of(2024, 11, 2), "desc", "merchant", "name", false, "trans_11_02",
+                        null, null, LocalDate.of(2024, 11, 2)),
+                new Transaction("acc1", new BigDecimal("45.24"), "USD", List.of("Groceries"), "cat1",
+                        LocalDate.of(2024, 11, 8), "desc", "merchant", "name", false, "trans_11_08",
+                        null, null, LocalDate.of(2024, 11, 8)),
+                new Transaction("acc1", new BigDecimal("32.00"), "USD", List.of("Groceries"), "cat1",
+                        LocalDate.of(2024, 11, 16), "desc", "merchant", "name", false, "trans_11_16",
+                        null, null, LocalDate.of(2024, 11, 16)),
+                new Transaction("acc1", new BigDecimal("50.00"), "USD", List.of("Groceries"), "cat1",
+                        LocalDate.of(2024, 11, 23), "desc", "merchant", "name", false, "trans_11_23",
+                        null, null, LocalDate.of(2024, 11, 23))
         );
 
-        Map<String, List<DateRange>> expected = new HashMap<>();
-        expected.put(categoryName, expectedWeeklyRanges);
+        // Create CategoryDesignators
+        List<CategoryDesignator> categoryDesignators = new ArrayList<>();
 
-        List<DateRange> dateRanges = result.get(categoryName);
-        assertEquals(expectedWeeklyRanges.size(), dateRanges.size(), "Should have a DateRange for each weekly period");
+        CategoryDesignator groceriesDesignator = new CategoryDesignator("cat1", "Groceries");
+        groceriesDesignator.setTransactions(groceryTransactions);
 
-        // Iterate over the expected weekly ranges and compare each with the actual results
-        for (int i = 0; i < expectedWeeklyRanges.size(); i++) {
-            DateRange expectedRange = expectedWeeklyRanges.get(i);
-            DateRange actualRange = dateRanges.get(i);
+        CategoryDesignator rentDesignator = new CategoryDesignator("cat2", "Rent");
+        rentDesignator.setTransactions(List.of(
+                new Transaction("acc1", new BigDecimal("1200.00"), "USD", List.of("Rent"), "cat2",
+                        LocalDate.of(2024, 11, 1), "desc", "merchant", "name", false, "trans_11_01",
+                        null, null, LocalDate.of(2024, 11, 1)),
+                new Transaction("acc1", new BigDecimal("707.00"), "USD", List.of("Rent"), "cat2",
+                        LocalDate.of(2024, 11, 16), "desc", "merchant", "name", false, "trans_11_16",
+                        null, null, LocalDate.of(2024, 11, 16))
+        ));
 
-            assertEquals(expectedRange.getStartDate(), actualRange.getStartDate(),
-                    "Start date for week " + (i + 1) + " should match");
-            assertEquals(expectedRange.getEndDate(), actualRange.getEndDate(),
-                    "End date for week " + (i + 1) + " should match");
-        }
-    }
+        categoryDesignators.add(groceriesDesignator);
+        categoryDesignators.add(rentDesignator);
 
-    private static Stream<List<Transaction>> provideTransactions() {
-        return Stream.of(List.of(
-                // Week 1: Transactions for September 1–8
-                new Transaction("account-1", new BigDecimal("45.00"), "USD", List.of("Groceries"), "cat-groceries", LocalDate.of(2024, 9, 3), "Walmart Purchase", "Walmart", "Grocery Purchase", false, "txn-1", LocalDate.of(2024, 9, 3), "https://example.com/logo.png", LocalDate.of(2024, 9, 3)),
-                new Transaction("account-1", new BigDecimal("30.00"), "USD", List.of("Gas"), "cat-gas", LocalDate.of(2024, 9, 5), "Gas Station", "Shell", "Fuel Purchase", false, "txn-2", LocalDate.of(2024, 9, 5), "https://example.com/logo.png", LocalDate.of(2024, 9, 5)),
-                new Transaction("account-1", new BigDecimal("100.00"), "USD", List.of("Rent"), "cat-rent", LocalDate.of(2024, 9, 7), "Rent Payment", "Landlord", "Monthly Rent", false, "txn-3", LocalDate.of(2024, 9, 7), "https://example.com/logo.png", LocalDate.of(2024, 9, 7)),
+        // Execute
+        Collection<CategoryPeriod> actual = budgetCategoryBuilder.createCategoryPeriods(
+                1L,budgetStart, budgetEnd, period, categoryDesignators);
 
-                // Week 2: September 8–15 (No "Groceries" transactions needed in this week for test purposes)
-                new Transaction("account-1", new BigDecimal("20.00"), "USD", List.of("Dining"), "cat-dining", LocalDate.of(2024, 9, 10), "Restaurant", "Local Diner", "Dinner Out", false, "txn-9", LocalDate.of(2024, 9, 10), "https://example.com/logo.png", LocalDate.of(2024, 9, 10)),
-                new Transaction("account-1", new BigDecimal("35.34"), "USD", List.of("Groceries"), "cat-groceries", LocalDate.of(2024, 9, 12), "PIN Purchase WINCO", "WINCO", "PIN Purchase WINCO", false, "txn-25", LocalDate.of(2024, 9, 12), "https://example.com/logo.png", LocalDate.of(2024, 9, 12)),
-                // Week 3: Transactions for September 15–22
-                new Transaction("account-1", new BigDecimal("50.00"), "USD", List.of("Groceries"), "cat-groceries", LocalDate.of(2024, 9, 15), "Costco Purchase", "Costco", "Grocery Purchase", false, "txn-4", LocalDate.of(2024, 9, 15), "https://example.com/logo.png", LocalDate.of(2024, 9, 15)),
-                new Transaction("account-1", new BigDecimal("75.00"), "USD", List.of("Utilities"), "cat-utilities", LocalDate.of(2024, 9, 17), "Electric Bill", "Electric Company", "Monthly Utility", false, "txn-5", LocalDate.of(2024, 9, 17), "https://example.com/logo.png", LocalDate.of(2024, 9, 17)),
+        // Verify
+        assertFalse(actual.isEmpty());
+        assertEquals(2, actual.size());
 
-                // Week 4: Transactions for September 22–29
-                new Transaction("account-1", new BigDecimal("40.00"), "USD", List.of("Groceries"), "cat-groceries", LocalDate.of(2024, 9, 22), "Trader Joe's Purchase", "Trader Joe's", "Grocery Purchase", false, "txn-8", LocalDate.of(2024, 9, 28), "https://example.com/logo.png", LocalDate.of(2024, 9, 28)),
-                new Transaction("account-1", new BigDecimal("25.00"), "USD", List.of("Order Out"), "cat-orderout", LocalDate.of(2024, 9, 22), "Uber Eats", "Uber Eats", "Food Delivery", false, "txn-7", LocalDate.of(2024, 9, 22), "https://example.com/logo.png", LocalDate.of(2024, 9, 22)),
+        // Convert to list and sort for comparison
+        List<CategoryPeriod> actualList = new ArrayList<>(actual);
+        actualList.sort(Comparator.comparing(CategoryPeriod::getCategory));
 
-                // Week 5: Transactions for September 29–30 (Partial week)
-                new Transaction("account-1", new BigDecimal("35.00"), "USD", List.of("Groceries"), "cat-groceries", LocalDate.of(2024, 9, 29), "Grocery Store", "Grocery Mart", "Grocery Purchase", false, "txn-10", LocalDate.of(2024, 9, 29), "https://example.com/logo.png", LocalDate.of(2024, 9, 29))
+        // Verify Groceries
+        CategoryPeriod groceriesPeriod = actualList.get(0);
+        assertEquals("Groceries", groceriesPeriod.getCategory());
+        assertEquals(4, groceriesPeriod.getDateRanges().size());
+
+        // Verify Rent
+        CategoryPeriod rentPeriod = actualList.get(1);
+        assertEquals("Rent", rentPeriod.getCategory());
+        assertEquals(2, rentPeriod.getDateRanges().size());
+
+        // Verify specific date ranges
+        verifyDateRanges(groceriesPeriod.getDateRanges(), List.of(
+                new DateRange(LocalDate.of(2024, 11, 1), LocalDate.of(2024, 11, 8)),
+                new DateRange(LocalDate.of(2024, 11, 8), LocalDate.of(2024, 11, 15)),
+                new DateRange(LocalDate.of(2024, 11, 15), LocalDate.of(2024, 11, 22)),
+                new DateRange(LocalDate.of(2024, 11, 22), LocalDate.of(2024, 11, 29))
+        ));
+
+        verifyDateRanges(rentPeriod.getDateRanges(), List.of(
+                new DateRange(LocalDate.of(2024, 11, 1), LocalDate.of(2024, 11, 8)),
+                new DateRange(LocalDate.of(2024, 11, 15), LocalDate.of(2024, 11, 22))
         ));
     }
 
-    @ParameterizedTest
-    @MethodSource("provideBiweeklyTransactions")
-    @DisplayName("Test createCategoryPeriod with a month of biweekly transactions for the Groceries category")
-    void testCreateCategoryPeriodWithBiweeklyGroceriesCategory(List<Transaction> transactions) {
-        String categoryName = "Groceries";
+    @Test
+    void testUpdateTransactionCategories_whenCategoryPeriodsIsNull_thenReturnEmptyList(){
+       List<TransactionCategory> transactionCategories = new ArrayList<>();
+       transactionCategories.add(createGasBudgetCategory(LocalDate.of(2024, 11, 1), LocalDate.of(2024, 11, 8), 60.00, 90.00));
 
-        final LocalDate BUDGET_START_DATE = LocalDate.of(2024, 9, 1);
-        final LocalDate BUDGET_END_DATE = LocalDate.of(2024, 9, 30);
+       List<TransactionCategory> actual = budgetCategoryBuilder.updateTransactionCategories(null, transactionCategories);
+       assertTrue(actual.isEmpty());
 
-        // Call the method under test with Period.BIWEEKLY
-        Map<String, List<DateRange>> result = budgetCategoryBuilder.createCategoryPeriods(
-                categoryName, BUDGET_START_DATE, BUDGET_END_DATE, Period.BIWEEKLY, transactions);
+    }
 
-        // Expected biweekly date ranges for September 2024
-        List<DateRange> expectedBiweeklyRanges = List.of(
-                new DateRange(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 15)),
-                new DateRange(LocalDate.of(2024, 9, 15), LocalDate.of(2024, 9, 30))
+    @Test
+    void testUpdateTransactionCategories_whenExistingTransactionCategoriesIsNull_thenReturnEmptyList(){
+       List<CategoryPeriod> categoryPeriods = new ArrayList<>();
+       categoryPeriods.add(new CategoryPeriod("Groceries", List.of(new DateRange(LocalDate.of(2024, 11, 1), LocalDate.of(2024, 11, 7)))));
+
+       List<TransactionCategory> actual = budgetCategoryBuilder.updateTransactionCategories(categoryPeriods, null);
+       assertTrue(actual.isEmpty());
+    }
+
+    @Test
+    void testUpdateTransactionCategories_whenCategoryPeriodAndExistingTransactionCategory_thenReturnTransactionCategories() {
+        List<CategoryPeriod> categoryPeriods = new ArrayList<>();
+
+        // Create date ranges
+        DateRange groceryRange1 = new DateRange(LocalDate.of(2024, 11, 8), LocalDate.of(2024, 11, 16));
+        DateRange groceryRange2 = new DateRange(LocalDate.of(2024, 11, 16), LocalDate.of(2024, 11, 24));
+        DateRange rentRange = new DateRange(LocalDate.of(2024, 11, 16), LocalDate.of(2024, 11, 30));
+        DateRange utilitiesRange = new DateRange(LocalDate.of(2024, 11, 16), LocalDate.of(2024, 11, 30));
+
+        // Setup Groceries CategoryPeriod
+        CategoryPeriod groceriesCategoryPeriod = new CategoryPeriod("Groceries",
+                List.of(groceryRange1, groceryRange2), 1L, true);
+        groceriesCategoryPeriod.setBudgetForDateRange(groceryRange1, 200.0);
+        groceriesCategoryPeriod.setBudgetForDateRange(groceryRange2, 250.0);
+        groceriesCategoryPeriod.setCategoryActualAmountForDateRange(groceryRange1, 45.0);
+        groceriesCategoryPeriod.setCategoryActualAmountForDateRange(groceryRange2, 65.0);
+        groceriesCategoryPeriod.setTransactions(Arrays.asList(
+                new Transaction("acc1", new BigDecimal("45.00"), "USD", Arrays.asList("Groceries"), "cat1",
+                        LocalDate.of(2024, 11, 9), "desc", "merchant", "name", false, "grocery_trans_3",
+                        null, null, LocalDate.of(2024, 11, 9)),
+                new Transaction("acc1", new BigDecimal("65.00"), "USD", Arrays.asList("Groceries"), "cat1",
+                        LocalDate.of(2024, 11, 17), "desc", "merchant", "name", false, "grocery_trans_4",
+                        null, null, LocalDate.of(2024, 11, 17))
+        ));
+
+        // Setup Rent CategoryPeriod
+        CategoryPeriod rentCategoryPeriod = new CategoryPeriod("Rent", List.of(rentRange), 1L, true);
+        rentCategoryPeriod.setBudgetForDateRange(rentRange, 1200.0);
+        rentCategoryPeriod.setCategoryActualAmountForDateRange(rentRange, 1200.0);
+        rentCategoryPeriod.setTransactions(Arrays.asList(
+                new Transaction("acc1", new BigDecimal("1200.00"), "USD", Arrays.asList("Rent"), "cat2",
+                        LocalDate.of(2024, 11, 16), "desc", "merchant", "name", false, "rent_trans_2",
+                        null, null, LocalDate.of(2024, 11, 16))
+        ));
+
+        // Setup Utilities CategoryPeriod
+        CategoryPeriod utilitiesCategoryPeriod = new CategoryPeriod("Utilities", List.of(utilitiesRange), 1L, true);
+        utilitiesCategoryPeriod.setBudgetForDateRange(utilitiesRange, 150.0);
+        utilitiesCategoryPeriod.setCategoryActualAmountForDateRange(utilitiesRange, 145.0);
+        utilitiesCategoryPeriod.setTransactions(Arrays.asList(
+                new Transaction("acc1", new BigDecimal("145.00"), "USD", Arrays.asList("Utilities"), "cat3",
+                        LocalDate.of(2024, 11, 16), "desc", "merchant", "name", false, "utilities_trans_1",
+                        null, null, LocalDate.of(2024, 11, 16))
+        ));
+
+        categoryPeriods.add(groceriesCategoryPeriod);
+        categoryPeriods.add(rentCategoryPeriod);
+        categoryPeriods.add(utilitiesCategoryPeriod);
+
+        // Setup existing TransactionCategories
+        TransactionCategory rentTransactionCategory = new TransactionCategory();
+        rentTransactionCategory.setCategoryName("Rent");
+        rentTransactionCategory.setStartDate(LocalDate.of(2024, 11, 1));
+        rentTransactionCategory.setEndDate(LocalDate.of(2024, 11, 8));
+        rentTransactionCategory.setBudgetedAmount(1200.0);
+        rentTransactionCategory.setBudgetActual(1200.0);
+        rentTransactionCategory.setTransactionIds(Arrays.asList("rent_trans_1"));
+
+        TransactionCategory groceriesTransactionCategory = new TransactionCategory();
+        groceriesTransactionCategory.setCategoryName("Groceries");
+        groceriesTransactionCategory.setStartDate(LocalDate.of(2024, 11, 1));
+        groceriesTransactionCategory.setEndDate(LocalDate.of(2024, 11, 8));
+        groceriesTransactionCategory.setBudgetedAmount(200.0);
+        groceriesTransactionCategory.setBudgetActual(150.0);
+        groceriesTransactionCategory.setTransactionIds(Arrays.asList("grocery_trans_1", "grocery_trans_2"));
+
+        List<TransactionCategory> existingCategories = Arrays.asList(
+                rentTransactionCategory,
+                groceriesTransactionCategory
         );
 
-        Map<String, List<DateRange>> expected = new HashMap<>();
-        expected.put(categoryName, expectedBiweeklyRanges);
-
-        List<DateRange> dateRanges = result.get(categoryName);
-        assertEquals(expectedBiweeklyRanges.size(), dateRanges.size(), "Should have a DateRange for each biweekly period");
-
-        assertEquals(expected.get(categoryName), result.get(categoryName));
-        assertEquals(expected.get(categoryName).get(0), result.get(categoryName).get(0));
-        assertEquals(expected.get(categoryName).get(1), result.get(categoryName).get(1));
-
-        // Iterate over the expected biweekly ranges and compare each with the actual results
-        for (int i = 0; i < expectedBiweeklyRanges.size(); i++) {
-            DateRange expectedRange = expectedBiweeklyRanges.get(i);
-            DateRange actualRange = dateRanges.get(i);
-
-            assertEquals(expectedRange.getStartDate(), actualRange.getStartDate(),
-                    "Start date for biweekly period " + (i + 1) + " should match");
-            assertEquals(expectedRange.getEndDate(), actualRange.getEndDate(),
-                    "End date for biweekly period " + (i + 1) + " should match");
-        }
-    }
-
-    private static Stream<List<Transaction>> provideBiweeklyTransactions() {
-        return Stream.of(List.of(
-                // Biweekly Period 1: September 1–14
-                new Transaction("account-1", new BigDecimal("45.00"), "USD", List.of("Groceries"), "cat-groceries", LocalDate.of(2024, 9, 3), "Walmart Purchase", "Walmart", "Grocery Purchase", false, "txn-1", LocalDate.of(2024, 9, 3), "https://example.com/logo.png", LocalDate.of(2024, 9, 3)),
-                new Transaction("account-1", new BigDecimal("20.00"), "USD", List.of("Groceries"), "cat-groceries", LocalDate.of(2024, 9, 10), "Local Grocery Store", "Local Grocery", "Grocery Purchase", false, "txn-2", LocalDate.of(2024, 9, 10), "https://example.com/logo.png", LocalDate.of(2024, 9, 10)),
-
-                // Biweekly Period 2: September 15–30
-                new Transaction("account-1", new BigDecimal("50.00"), "USD", List.of("Groceries"), "cat-groceries", LocalDate.of(2024, 9, 15), "Costco Purchase", "Costco", "Grocery Purchase", false, "txn-3", LocalDate.of(2024, 9, 15), "https://example.com/logo.png", LocalDate.of(2024, 9, 15)),
-                new Transaction("account-1", new BigDecimal("40.00"), "USD", List.of("Groceries"), "cat-groceries", LocalDate.of(2024, 9, 28), "Trader Joe's Purchase", "Trader Joe's", "Grocery Purchase", false, "txn-4", LocalDate.of(2024, 9, 28), "https://example.com/logo.png", LocalDate.of(2024, 9, 28))
-        ));
-    }
-
-    @ParameterizedTest
-    @MethodSource("provideMonthlyTransactions")
-    @DisplayName("Test createCategoryPeriod with a month of transactions for the Groceries category (Monthly Period)")
-    void testCreateCategoryPeriodWithMonthlyGroceriesCategory(List<Transaction> transactions) {
-        String categoryName = "Groceries";
-
-        final LocalDate BUDGET_START_DATE = LocalDate.of(2024, 9, 1);
-        final LocalDate BUDGET_END_DATE = LocalDate.of(2024, 9, 30);
-
-        // Call the method under test with Period.MONTHLY
-        Map<String, List<DateRange>> result = budgetCategoryBuilder.createCategoryPeriods(
-                categoryName, BUDGET_START_DATE, BUDGET_END_DATE, Period.MONTHLY, transactions);
-
-
-        // Expected single DateRange for the entire month
-        List<DateRange> expectedMonthlyRange = List.of(
-                new DateRange(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 30))
+        // Execute
+        List<TransactionCategory> result = budgetCategoryBuilder.updateTransactionCategories(
+                categoryPeriods,
+                existingCategories
         );
 
-        Map<String, List<DateRange>> expected = new HashMap<>();
-        expected.put("Groceries", expectedMonthlyRange);
+        // Verify basics
+        assertFalse(result.isEmpty());
+        assertEquals(6, result.size());
 
-        assertEquals(expected.get(categoryName), result.get(categoryName));
-        assertEquals(expected.get(categoryName).get(0), result.get(categoryName).get(0));
+        // Verify existing categories remain unchanged
+        assertTrue(result.stream()
+                .anyMatch(tc -> tc.getCategoryName().equals("Rent") &&
+                        tc.getStartDate().equals(LocalDate.of(2024, 11, 1)) &&
+                        tc.getBudgetedAmount() == 1200.0 &&
+                        tc.getBudgetActual() == 1200.0));
 
-        List<DateRange> dateRanges = result.get(categoryName);
-        assertEquals(expectedMonthlyRange.size(), dateRanges.size(), "Should have a single DateRange for the whole month");
+        // Verify new categories with updated structure
+        assertTrue(result.stream()
+                .anyMatch(tc -> tc.getCategoryName().equals("Groceries") &&
+                        tc.getStartDate().equals(LocalDate.of(2024, 11, 8)) &&
+                        tc.getBudgetedAmount() == 200.0 &&
+                        tc.getBudgetActual() == 45.0 &&
+                        tc.getBudgetId() == 1L));
 
-        // Compare the expected monthly range with the actual result
-        DateRange expectedRange = expectedMonthlyRange.get(0);
-        DateRange actualRange = dateRanges.get(0);
+        assertTrue(result.stream()
+                .anyMatch(tc -> tc.getCategoryName().equals("Groceries") &&
+                        tc.getStartDate().equals(LocalDate.of(2024, 11, 16)) &&
+                        tc.getBudgetedAmount() == 250.0 &&
+                        tc.getBudgetActual() == 65.0 &&
+                        tc.getBudgetId() == 1L));
 
-        assertEquals(expectedRange.getStartDate(), actualRange.getStartDate(), "Start date for the monthly period should match");
-        assertEquals(expectedRange.getEndDate(), actualRange.getEndDate(), "End date for the monthly period should match");
-    }
-
-    private static Stream<List<Transaction>> provideMonthlyTransactions() {
-        return Stream.of(List.of(
-                // "Groceries" transactions throughout September
-                new Transaction("account-1", new BigDecimal("45.00"), "USD", List.of("Groceries"), "cat-groceries", LocalDate.of(2024, 9, 3), "Walmart Purchase", "Walmart", "Grocery Purchase", false, "txn-1", LocalDate.of(2024, 9, 3), "https://example.com/logo.png", LocalDate.of(2024, 9, 3)),
-                new Transaction("account-1", new BigDecimal("50.00"), "USD", List.of("Groceries"), "cat-groceries", LocalDate.of(2024, 9, 15), "Costco Purchase", "Costco", "Grocery Purchase", false, "txn-2", LocalDate.of(2024, 9, 15), "https://example.com/logo.png", LocalDate.of(2024, 9, 15)),
-                new Transaction("account-1", new BigDecimal("40.00"), "USD", List.of("Groceries"), "cat-groceries", LocalDate.of(2024, 9, 28), "Trader Joe's Purchase", "Trader Joe's", "Grocery Purchase", false, "txn-3", LocalDate.of(2024, 9, 28), "https://example.com/logo.png", LocalDate.of(2024, 9, 28)),
-
-                // Other category transactions throughout September
-                new Transaction("account-1", new BigDecimal("30.00"), "USD", List.of("Gas"), "cat-gas", LocalDate.of(2024, 9, 5), "Gas Station", "Shell", "Fuel Purchase", false, "txn-4", LocalDate.of(2024, 9, 5), "https://example.com/logo.png", LocalDate.of(2024, 9, 5)),
-                new Transaction("account-1", new BigDecimal("100.00"), "USD", List.of("Rent"), "cat-rent", LocalDate.of(2024, 9, 1), "Rent Payment", "Landlord", "Monthly Rent", false, "txn-5", LocalDate.of(2024, 9, 1), "https://example.com/logo.png", LocalDate.of(2024, 9, 1)),
-                new Transaction("account-1", new BigDecimal("75.00"), "USD", List.of("Utilities"), "cat-utilities", LocalDate.of(2024, 9, 17), "Electric Bill", "Electric Company", "Monthly Utility", false, "txn-6", LocalDate.of(2024, 9, 17), "https://example.com/logo.png", LocalDate.of(2024, 9, 17)),
-                new Transaction("account-1", new BigDecimal("25.00"), "USD", List.of("Dining"), "cat-dining", LocalDate.of(2024, 9, 20), "Restaurant", "Local Diner", "Dinner Out", false, "txn-7", LocalDate.of(2024, 9, 20), "https://example.com/logo.png", LocalDate.of(2024, 9, 20)),
-                new Transaction("account-1", new BigDecimal("60.00"), "USD", List.of("Subscriptions"), "cat-subscriptions", LocalDate.of(2024, 9, 10), "Netflix Subscription", "Netflix", "Monthly Subscription", false, "txn-8", LocalDate.of(2024, 9, 10), "https://example.com/logo.png", LocalDate.of(2024, 9, 10))
-        ));
-    }
-
-
-
-    @Test
-    void testInitializeUserBudgetCategories_whenBudgetIsNull_thenReturnEmptyMap(){
-       List<Transaction> transactions = new ArrayList<>();
-       transactions.add(createWincoTransaction());
-       List<TransactionCategory> userBudgetCategories = budgetCategoryBuilder.initializeTransactionCategories(null, testBudgetPeriod, transactions);
-       assertNotNull(userBudgetCategories);
-       assertTrue(userBudgetCategories.isEmpty());
-    }
-
-
-    @Test
-    void testInitializeUserBudgetCategories_whenBudgetPeriodIsNull_thenReturnEmptyMap(){
-        Budget budget = new Budget();
-        budget.setBudgetAmount(new BigDecimal("3070"));
-        budget.setBudgetName("Savings Plan");
-        budget.setActual(new BigDecimal("1609"));
-
-        List<Transaction> transactions = new ArrayList<>();
-        transactions.add(createWincoTransaction());
-
-        List<TransactionCategory> actual = budgetCategoryBuilder.initializeTransactionCategories(budget, null, transactions);
-        assertNotNull(actual);
-        assertTrue(actual.isEmpty());
+        assertTrue(result.stream()
+                .anyMatch(tc -> tc.getCategoryName().equals("Utilities") &&
+                        tc.getStartDate().equals(LocalDate.of(2024, 11, 16)) &&
+                        tc.getBudgetedAmount() == 150.0 &&
+                        tc.getBudgetActual() == 145.0 &&
+                        tc.getBudgetId() == 1L &&
+                        tc.getIsActive()));
     }
 
     @Test
-    void testInitializeUserBudgetCategories_whenTransactionsListIsEmpty_thenReturnEmptyMap(){
-        Budget budget = new Budget();
-        budget.setBudgetAmount(new BigDecimal("3070"));
-        budget.setBudgetName("Savings Plan");
-        budget.setActual(new BigDecimal("1609"));
-
-        List<Transaction> transactions = new ArrayList<>();
-
-        List<TransactionCategory> actual = budgetCategoryBuilder.initializeTransactionCategories(budget, testBudgetPeriod, transactions);
-        assertNotNull(actual);
-        assertTrue(actual.isEmpty());
-    }
-
-    @Test
-    void testInitializeUserBudgetCategories_SeptMockData_returnDateRanges()
-    {
-        Budget budget = new Budget();
-        budget.setBudgetAmount(new BigDecimal("3070"));
-        budget.setBudgetName("Savings Plan");
-        budget.setActual(new BigDecimal("1609"));
-        budget.setStartDate(LocalDate.of(2024, 9, 1));
-        budget.setEndDate(LocalDate.of(2024, 9, 30));
-        budget.setUserId(1L);
-
-        BudgetPeriod budgetPeriod = new BudgetPeriod(Period.WEEKLY, LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 30));
-
-        List<Transaction> transactions = new ArrayList<>();
-        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 1), List.of("Supermarkets and Groceries"), "19047000", "PIN Purchase WINCO", "WINCO", "WINCO", new BigDecimal("35.23")));
-        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 3), List.of("Supermarkets and Groceries"), "19047000", "PIN Purchase WINCO", "WINCO", "WINCO", new BigDecimal("35.23")));
-        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 4), List.of("Gas Stations"), "22009000", "PIN Purchase MAVERICK", "MAVERICK", "MAVERICK", new BigDecimal("31.55")));
-        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 5), List.of("Subscription"), "18061000", "AFFIRM Purchase", "AFFIRM", "AFFIRM", new BigDecimal("19.23")));
-        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 8), List.of("Subscription"), "18061000", "AFFIRM Purchase", "AFFIRM", "AFFIRM", new BigDecimal("10.00")));
-        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 15), List.of("Subscription"), "18061000", "Spotify", "Spotify", "Spotify", new BigDecimal("12.57")));
-        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 15), List.of("Supermarkets and Groceries"), "19047000", "PIN Purchase WINCO", "WINCO", "WINCO", new BigDecimal("16.23")));
-        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 15), List.of("Supermarkets and Groceries"), "19047000", "Pin Purchase HARMONS", "HARMONS", "HARMONS", new BigDecimal("7.89")));
-        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 20), List.of("Gas Stations"), "22009000", "PIN Purchase MAVERICK", "MAVERICK", "MAVERICK", new BigDecimal("35.23")));
-        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 25), List.of("Supermarkets and Groceries"), "19047000", "PIN Purchase WINCO", "WINCO", "WINCO", new BigDecimal("17.89")));
-        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 27), List.of("Subscription"), "18061000", "AFFIRM Purchase", "AFFIRM", "AFFIRM", new BigDecimal("31.00")));
-        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 30), List.of("Gas Stations"), "22009000", "PIN Purchase MAVERICK", "MAVERICK", "MAVERICK", new BigDecimal("24.56")));
-
-        List<CategorySpending> mockCategorySpendingList = new ArrayList<>();
-        mockCategorySpendingList.add(new CategorySpending("19047000", "Supermarkets and Groceries", new BigDecimal("112.47")));
-        mockCategorySpendingList.add(new CategorySpending("19047000", "Gas Stations", new BigDecimal("91.34")));
-        mockCategorySpendingList.add(new CategorySpending("18061000", "Subscription", new BigDecimal("72.8")));
-
-        Map<String, BigDecimal> mockCategoryToBudgetMap = new HashMap<>();
-        mockCategoryToBudgetMap.put("Supermarkets and Groceries", new BigDecimal("200"));
-        mockCategoryToBudgetMap.put("Gas Stations", new BigDecimal("100"));
-        mockCategoryToBudgetMap.put("Subscription", new BigDecimal("120"));
-
-        Map<String, List<DateRange>> categoryPeriods = new HashMap<>();
-        categoryPeriods.put("Supermarkets and Groceries", List.of(
-                new DateRange(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8)),   // Covers transactions on Sept 1, 3
-                new DateRange(LocalDate.of(2024, 9, 15), LocalDate.of(2024, 9, 22)), // Covers transactions on Sept 15
-                new DateRange(LocalDate.of(2024, 9, 25), LocalDate.of(2024, 9, 27))  // Covers transaction on Sept 25
-        ));
-
-        categoryPeriods.put("Gas Stations", List.of(
-                new DateRange(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8)),   // Covers transaction on Sept 4
-                new DateRange(LocalDate.of(2024, 9, 15), LocalDate.of(2024, 9, 20)), // Covers transaction on Sept 20
-                new DateRange(LocalDate.of(2024, 9, 30), LocalDate.of(2024, 9, 30))  // Covers transaction on Sept 30
-        ));
-
-        categoryPeriods.put("Subscription", List.of(
-                new DateRange(LocalDate.of(2024, 9, 5), LocalDate.of(2024, 9, 8)),   // Covers transactions on Sept 5, 8
-                new DateRange(LocalDate.of(2024, 9, 15), LocalDate.of(2024, 9, 27))  // Covers transactions on Sept 15, 27
-        ));
-
-        when(categoryService.getCategoryIdByName("Supermarkets and Groceries")).thenReturn(Optional.of("19047000"));
-        when(categoryService.getCategoryIdByName("Gas Stations")).thenReturn(Optional.of("19047000"));
-        when(categoryService.getCategoryIdByName("Subscription")).thenReturn(Optional.of("18061000"));
-
-        doReturn(categoryPeriods).when(budgetCategoryBuilder)
-                .createCategoryPeriods(anyString(), any(LocalDate.class), any(LocalDate.class), any(Period.class), anyList());
-
-        when(budgetCalculator.createCategoryToBudgetMap(anyList(), any(Budget.class), any(BigDecimal.class), any(BudgetPeriod.class)))
-                .thenReturn(mockCategoryToBudgetMap);
-
-
-        List<TransactionCategory> expectedBudgetCategories = new ArrayList<>();
-        expectedBudgetCategories.add(createUserBudgetCategory(
-                "19047000", "Supermarkets and Groceries", 200.0, 112.47,
-                LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8), 1L
-        ));
-        expectedBudgetCategories.add(createUserBudgetCategory(
-                "19047000", "Supermarkets and Groceries", 200.0, 112.47,
-                LocalDate.of(2024, 9, 15), LocalDate.of(2024, 9, 22), 1L
-        ));
-        expectedBudgetCategories.add(createUserBudgetCategory(
-                "19047000", "Supermarkets and Groceries", 200.0, 112.47,
-                LocalDate.of(2024, 9, 25), LocalDate.of(2024, 9, 27), 1L
-        ));
-
-// Adding expected UserBudgetCategory entries for "Gas Stations"
-        expectedBudgetCategories.add(createUserBudgetCategory(
-                "22009000", "Gas Stations", 100.0, 91.34,
-                LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8), 1L
-        ));
-        expectedBudgetCategories.add(createUserBudgetCategory(
-                "22009000", "Gas Stations", 100.0, 91.34,
-                LocalDate.of(2024, 9, 15), LocalDate.of(2024, 9, 20), 1L
-        ));
-        expectedBudgetCategories.add(createUserBudgetCategory(
-                "22009000", "Gas Stations", 100.0, 91.34,
-                LocalDate.of(2024, 9, 30), LocalDate.of(2024, 9, 30), 1L
-        ));
-
-// Adding expected UserBudgetCategory entries for "Subscription"
-        expectedBudgetCategories.add(createUserBudgetCategory(
-                "18061000", "Subscription", 120.0, 72.8,
-                LocalDate.of(2024, 9, 5), LocalDate.of(2024, 9, 8), 1L
-        ));
-        expectedBudgetCategories.add(createUserBudgetCategory(
-                "18061000", "Subscription", 120.0, 72.8,
-                LocalDate.of(2024, 9, 15), LocalDate.of(2024, 9, 27), 1L
-        ));
-
-        List<TransactionCategory> actual = budgetCategoryBuilder.initializeTransactionCategories(budget, budgetPeriod, transactions);
-        for(int i = 0; i < expectedBudgetCategories.size(); i++)
-        {
-            TransactionCategory expected = expectedBudgetCategories.get(i);
-            TransactionCategory actualCategory = actual.get(i);
-
-            // Log category information before the assertions
-            System.out.println("Comparing category: " + expected.getCategoryName());
-            System.out.println("Expected Budget Actual: " + expected.getBudgetActual() + ", Actual Budget Actual: " + actualCategory.getBudgetActual());
-            System.out.println("Expected Budgeted Amount: " + expected.getBudgetedAmount() + ", Actual Budgeted Amount: " + actualCategory.getBudgetedAmount());
-            System.out.println("Expected Start Date: " + expected.getStartDate() + ", Actual Start Date: " + actualCategory.getStartDate());
-            System.out.println("Expected End Date: " + expected.getEndDate() + ", Actual End Date: " + actualCategory.getEndDate());
-
-            // Perform assertions
-            assertEquals(expected.getBudgetActual(), actualCategory.getBudgetActual(), "Budget actual does not match for category: " + expected.getCategoryName());
-            assertEquals(expected.getBudgetedAmount(), actualCategory.getBudgetedAmount(), "Budgeted amount does not match for category: " + expected.getCategoryName());
-            assertEquals(expected.getStartDate(), actualCategory.getStartDate(), "Start date does not match for category: " + expected.getCategoryName());
-            assertEquals(expected.getEndDate(), actualCategory.getEndDate(), "End date does not match for category: " + expected.getCategoryName());
-        }
-
-    }
-
-    @Test
-    void testCreateCategorySpendingList_whenCategoriesIsEmpty_thenReturnEmptyList(){
-        List<Transaction> transactions = new ArrayList<>();
-        transactions.add(createAffirmTransaction());
-
-        List<CategorySpending> actual = budgetCategoryBuilder.createCategorySpendingList(new ArrayList<>(), transactions);
-        assertNotNull(actual);
-        assertTrue(actual.isEmpty());
-    }
-
-    @Test
-    void testCreateCategorySpendingList_whenTransactionsIsEmpty_thenReturnEmptyList(){
-        List<String> categories = new ArrayList<>();
-        categories.add("Groceries");
-
-        List<CategorySpending> actual = budgetCategoryBuilder.createCategorySpendingList(categories, new ArrayList<>());
-        assertNotNull(actual);
-        assertTrue(actual.isEmpty());
-    }
-
-    @Test
-    void testCreateCategorySpendingList_returnCategorySpendingList(){
-        List<String> categories = new ArrayList<>();
-        categories.add("Groceries");
-        categories.add("Gas");
-        categories.add("Payments");
-
-        List<Transaction> transactions = new ArrayList<>();
-        transactions.add(createAffirmTransaction());
-        transactions.add(createWalmartTransaction());
-        transactions.add(createGasTransaction());
-
-        List<CategorySpending> expectedCategorySpending = new ArrayList<>();
-
-        Mockito.when(categoryService.getCategoryIdByName("Payments")).thenReturn(Optional.of("cat-005"));
-        Mockito.when(categoryService.getCategoryIdByName("Gas")).thenReturn(Optional.of("cat-003"));
-        Mockito.when(categoryService.getCategoryIdByName("Groceries")).thenReturn(Optional.of("cat-001"));
-
-        expectedCategorySpending.add(new CategorySpending("cat-001","Groceries", new BigDecimal("50.75")));
-        expectedCategorySpending.add(new CategorySpending("cat-003", "Gas", new BigDecimal("50.75")));
-        expectedCategorySpending.add(new CategorySpending("cat-005","Payments", new BigDecimal("50.75")));
-
-        List<CategorySpending> actual = budgetCategoryBuilder.createCategorySpendingList(categories, transactions);
-        for(int i = 0; i < expectedCategorySpending.size(); i++)
-        {
-            assertEquals(expectedCategorySpending.get(i).getCategoryName(), actual.get(i).getCategoryName());
-            assertEquals(expectedCategorySpending.get(i).getCategoryId(), actual.get(i).getCategoryId());
-            assertEquals(expectedCategorySpending.get(i).getActualSpending(), actual.get(i).getActualSpending());
-        }
-        assertEquals(expectedCategorySpending.size(), actual.size());
-    }
-
-    @Test
-    void testBuildUserBudgetCategoryList_whenCategoryBudgetIsEmpty_thenReturnEmptyList(){
-        List<CategorySpending> categorySpendings = new ArrayList<>();
-        categorySpendings.add(new CategorySpending("cat-001","Groceries", new BigDecimal("50.75")));
-
-        Map<String, List<DateRange>> categoryDateRanges = new HashMap<>();
-        categoryDateRanges.put("cat-001", List.of(new DateRange(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8))));
-        Long userId = 1L;
-
-        Map<String, BigDecimal> categoryBudgets = new HashMap<>();
-
-        List<TransactionCategory> userBudgetCategories = budgetCategoryBuilder.buildUserBudgetCategoryList(categoryBudgets, categorySpendings, categoryDateRanges, userId);
-        assertNotNull(userBudgetCategories);
-        assertTrue(userBudgetCategories.isEmpty());
-    }
-
-    @Test
-    void testBuildUserBudgetCategoryList_whenCategorySpendingListIsEmpty_thenReturnEmptyList(){
-        Map<String, List<DateRange>> categoryDateRanges = new HashMap<>();
-        categoryDateRanges.put("cat-001", List.of(new DateRange(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8))));
-        Long userId = 1L;
-
-        List<CategorySpending> categorySpendings = new ArrayList<>();;
-
-        Map<String, BigDecimal> categoryBudgets = new HashMap<>();
-        categoryBudgets.put("cat-001", new BigDecimal("50.75"));
-        categoryBudgets.put("cat-003", new BigDecimal("50.75"));
-
-        List<TransactionCategory> actual = budgetCategoryBuilder.buildUserBudgetCategoryList(categoryBudgets, categorySpendings, categoryDateRanges, userId);
-        assertNotNull(actual);
-        assertTrue(actual.isEmpty());
-    }
-
-    @Test
-    void testBuildUserBudgetCategoryList_whenCategoryDateRangesListIsEmpty_thenReturnEmptyList(){
-        Map<String, List<DateRange>> categoryDateRanges = new HashMap<>();
-
-        List<CategorySpending> categorySpendings = new ArrayList<>();
-        categorySpendings.add(new CategorySpending("cat-001","Groceries", new BigDecimal("50.75")));
-
-        Map<String, BigDecimal> categoryBudgets = new HashMap<>();
-        categoryBudgets.put("cat-001", new BigDecimal("50.75"));
-        categoryBudgets.put("cat-003", new BigDecimal("50.75"));
-        Long userId = 1L;
-
-        List<TransactionCategory> actual = budgetCategoryBuilder.buildUserBudgetCategoryList(categoryBudgets, categorySpendings, categoryDateRanges, userId);
-        assertNotNull(actual);
-        assertTrue(actual.isEmpty());
-    }
-
-    @Test
-    void testBuildUserBudgetCategoryList_thenReturnUserBudgetCategories(){
-        List<CategorySpending> categorySpendings = new ArrayList<>();
-        categorySpendings.add(new CategorySpending("cat-001","Groceries", new BigDecimal("176.0")));
-        categorySpendings.add(new CategorySpending("cat-003","Gas", new BigDecimal("32.23")));
-
-        Map<String, BigDecimal> categoryBudgets = new HashMap<>();
-        categoryBudgets.put("Groceries", new BigDecimal("450.0"));
-        categoryBudgets.put("Gas", new BigDecimal("67.0"));
-        Long userId = 1L;
-
-        Map<String, List<DateRange>> categoryDateRanges = new HashMap<>();
-        categoryDateRanges.put("Groceries", List.of(new DateRange(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8))));
-        categoryDateRanges.put("Gas", List.of(new DateRange(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8))));
-
-        List<TransactionCategory> expectedUserBudgetCategories = new ArrayList<>();
-        expectedUserBudgetCategories.add(createGroceriesCategory(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8)));
-        expectedUserBudgetCategories.add(createGasBudgetCategory(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8), 67.00, 32.22));
-
-        List<TransactionCategory> actual = budgetCategoryBuilder.buildUserBudgetCategoryList(categoryBudgets, categorySpendings, categoryDateRanges, userId);
-        for(int i = 0; i < expectedUserBudgetCategories.size(); i++){
-            assertEquals(expectedUserBudgetCategories.get(i).getCategoryName(), actual.get(i).getCategoryName());
-            assertEquals(expectedUserBudgetCategories.get(i).getCategoryId(), actual.get(i).getCategoryId());
-            assertEquals(expectedUserBudgetCategories.get(i).getBudgetedAmount(), actual.get(i).getBudgetedAmount());
-            assertEquals(expectedUserBudgetCategories.get(i).getBudgetActual(), actual.get(i).getBudgetActual());
-            assertEquals(expectedUserBudgetCategories.get(i).getStartDate(), actual.get(i).getStartDate());
-            assertEquals(expectedUserBudgetCategories.get(i).getEndDate(), actual.get(i).getEndDate());
-        }
-    }
-
-    @Test
-    void testLinkCategoryToTransactionsByDateRange_whenTransactionsListIsEmpty_thenReturnEmptyList(){
-        List<Transaction> transactions = new ArrayList<>();
-        DateRange dateRange = new DateRange(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8));
-        Long userId = 1L;
-
-        ArrayList<TransactionLink> actual = budgetCategoryBuilder.linkCategoryToTransactionsByDateRange(transactions, dateRange, userId);
-        assertTrue(actual.isEmpty());
-    }
-
-    @Test
-    void testLinkCategoryToTransactionByDateRange_whenDateRangeIsNull_thenReturnEmptyList(){
-        List<Transaction> transactions = new ArrayList<>();
-        transactions.add(createGasTransaction());
-        DateRange dateRange = null;
-        Long userId = 1L;
-
-        ArrayList<TransactionLink> actual = budgetCategoryBuilder.linkCategoryToTransactionsByDateRange(transactions, dateRange, userId);
-        assertTrue(actual.isEmpty());
-    }
-
-    @Test
-    void testLinkCategoryToTransactionByDateRange_whenNullStartDateInDateRange_thenThrowException(){
-        List<Transaction> transactions = new ArrayList<>();
-        transactions.add(createGasTransaction());
-
-        DateRange dateRange = new DateRange(null, LocalDate.of(2024, 9, 5));
-        Long userId = 1L;
-        assertThrows(IllegalDateException.class, () -> {
-            budgetCategoryBuilder.linkCategoryToTransactionsByDateRange(transactions, dateRange, userId);
-        });
-    }
-
-    @Test
-    void testLinkCategoryToTransactionsByDateRange_whenNullEndDateInDateRange_thenThrowException(){
-        List<Transaction> transactions = new ArrayList<>();
-        transactions.add(createGasTransaction());
-
-        DateRange dateRange = new DateRange(LocalDate.of(2024, 9, 5), null);
-        Long userId = 1L;
-        assertThrows(IllegalDateException.class, () -> {
-            budgetCategoryBuilder.linkCategoryToTransactionsByDateRange(transactions, dateRange, userId);
-        });
-    }
-
-    @Test
-    void testLinkCategoryToTransactionsByDateRange_whenTransactionsAreAfterDateRange_thenReturnEmptyList(){
-        List<Transaction> transactions = new ArrayList<>();
-        transactions.add(createTransactionExample(LocalDate.of(2025, 1, 24),
-                List.of("Supermarkets And Groceries"), "19047000",
-                "PIN Purchase WINCO #15", "WINCO FOODS", "WINCO FOODS", new BigDecimal("120")));
-        transactions.add(createTransactionExample(LocalDate.of(2025, 5, 24),
-                List.of("Gas Stations"), "2205000", "PIN Purchase MAVERIK", "MAVERIK", "MAVERIK", new BigDecimal("37.56")));
-        DateRange dateRange = new DateRange(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8));
-        Long userId = 1L;
-
-        ArrayList<TransactionLink> actual = budgetCategoryBuilder.linkCategoryToTransactionsByDateRange(transactions, dateRange, userId);
-        assertTrue(actual.isEmpty());
-    }
-
-    @Test
-    void testLinkCategoryToTransactionsByDateRange_whenTransactionsAreBeforeDateRange_thenReturnEmptyList(){
-        List<Transaction> transactions = new ArrayList<>();
-        transactions.add(createTransactionExample(LocalDate.of(2023, 1, 24),
-                List.of("Supermarkets And Groceries"), "19047000",
-                "PIN Purchase WINCO #15", "WINCO FOODS", "WINCO FOODS", new BigDecimal("120")));
-        transactions.add(createTransactionExample(LocalDate.of(2023, 5, 24),
-                List.of("Gas Stations"), "2205000", "PIN Purchase MAVERIK", "MAVERIK", "MAVERIK", new BigDecimal("37.56")));
-        DateRange dateRange = new DateRange(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8));
-        Long userId = 1L;
-
-        ArrayList<TransactionLink> actual = budgetCategoryBuilder.linkCategoryToTransactionsByDateRange(transactions, dateRange, userId);
-        assertTrue(actual.isEmpty());
-    }
-
-    @Test
-    void testLinkCategoryToTransactionsByDateRange_whenRecurringTransactionsWithinDateRange_thenReturnTransactionLinks(){
-        List<RecurringTransaction> recurringTransactions = new ArrayList<>();
-        RecurringTransaction affirmTransaction = createAffirmRecurringTransaction();
-        RecurringTransaction walmartTransaction = createWalmartRecurringTransaction();
-
-        recurringTransactions.add(affirmTransaction);
-        recurringTransactions.add(walmartTransaction);
-        DateRange dateRange = new DateRange(LocalDate.of(2024, 11, 1), LocalDate.of(2024, 11, 10));
-        Long userId = 1L;
-
-        ArrayList<TransactionLink> expected = new ArrayList<>();
-        expected.add(createTransactionLink(affirmTransaction, "Subscriptions"));
-        expected.add(createTransactionLink(walmartTransaction, "Subscriptions"));
-
-        Map<String, List<String>> finalizedTransactionCategories = new HashMap<>();
-        finalizedTransactionCategories.put("Subscriptions", List.of(affirmTransaction.getTransactionId(), walmartTransaction.getTransactionId()));
-
-        when(categoryRuleEngine.finalizeUserTransactionCategoriesForDateRange(
-                anyList(),
-                eq(userId),
-                eq(dateRange))).thenReturn(finalizedTransactionCategories);
-
-        ArrayList<TransactionLink> actual = budgetCategoryBuilder.linkCategoryToTransactionsByDateRange(recurringTransactions, dateRange, userId);
-        assertEquals(expected.size(), actual.size());
-        for(int i = 0; i < actual.size(); i++){
-            assertEquals(expected.get(i).getCategory(), actual.get(i).getCategory());
-            assertEquals(expected.get(i).getTransactionId(), actual.get(i).getTransactionId());
-        }
-    }
-
-    @Test
-    void testLinkCategoryToTransactionsByDateRange_whenTransactionWithinDateRange_thenReturnTransactionLinks(){
-        List<Transaction> transactions = new ArrayList<>();
-        Transaction walmartTransaction = createWalmartTransaction();
-        Transaction wincoTransaction = createWincoTransaction();
-        transactions.add(walmartTransaction);
-        transactions.add(wincoTransaction);
-
+    void testUpdateTransactionCategories_whenCategoryPeriodsInSamePeriodAsExistingTransactionCategories_thenReturnTransactionCategories() {
+        // Create date ranges that match existing transaction categories
         DateRange dateRange = new DateRange(LocalDate.of(2024, 11, 1), LocalDate.of(2024, 11, 8));
-        Long userId = 1L;
-        ArrayList<TransactionLink> expected = new ArrayList<>();
-        expected.add(createTransactionLink(walmartTransaction, "Groceries"));
-        expected.add(createTransactionLink(wincoTransaction, "Groceries"));
 
-        Map<String, List<String>> finalizedTransactionCategories = new HashMap<>();
-        finalizedTransactionCategories.put("Groceries", List.of(wincoTransaction.getTransactionId(), walmartTransaction.getTransactionId()));
+        // Setup CategoryPeriods with same date range as existing
+        CategoryPeriod groceriesCategoryPeriod = new CategoryPeriod("Groceries", List.of(dateRange), 1L, true);
+        groceriesCategoryPeriod.setBudgetForDateRange(dateRange, 200.0);
+        groceriesCategoryPeriod.setCategoryActualAmountForDateRange(dateRange, 85.0);
+        groceriesCategoryPeriod.setTransactions(Arrays.asList(
+                new Transaction("acc1", new BigDecimal("85.00"), "USD", Arrays.asList("Groceries"), "cat1",
+                        LocalDate.of(2024, 11, 3), "desc", "merchant", "name", false, "grocery_trans_3",
+                        null, null, LocalDate.of(2024, 11, 3))
+        ));
 
-        when(categoryRuleEngine.finalizeUserTransactionCategoriesForDateRange(
-                anyList(),
-                eq(userId),
-                eq(dateRange))).thenReturn(finalizedTransactionCategories);
+        CategoryPeriod rentCategoryPeriod = new CategoryPeriod("Rent", List.of(dateRange), 1L, true);
+        rentCategoryPeriod.setBudgetForDateRange(dateRange, 1200.0);
+        rentCategoryPeriod.setCategoryActualAmountForDateRange(dateRange, 800.0);
+        rentCategoryPeriod.setTransactions(Arrays.asList(
+                new Transaction("acc1", new BigDecimal("800.00"), "USD", Arrays.asList("Rent"), "cat2",
+                        LocalDate.of(2024, 11, 2), "desc", "merchant", "name", false, "rent_trans_2",
+                        null, null, LocalDate.of(2024, 11, 2))
+        ));
 
-        ArrayList<TransactionLink> actual = budgetCategoryBuilder.linkCategoryToTransactionsByDateRange(transactions, dateRange, userId);
-        assertEquals(expected.size(), actual.size());
-        for(int i = 0; i < actual.size(); i++){
-            assertEquals(expected.get(i).getCategory(), actual.get(i).getCategory());
-            assertEquals(expected.get(i).getTransactionId(), actual.get(i).getTransactionId());
+        List<CategoryPeriod> categoryPeriods = Arrays.asList(groceriesCategoryPeriod, rentCategoryPeriod);
+
+        // Setup existing TransactionCategories for same period
+        TransactionCategory existingRentCategory = new TransactionCategory();
+        existingRentCategory.setCategoryName("Rent");
+        existingRentCategory.setStartDate(LocalDate.of(2024, 11, 1));
+        existingRentCategory.setEndDate(LocalDate.of(2024, 11, 8));
+        existingRentCategory.setBudgetedAmount(1200.0);
+        existingRentCategory.setBudgetActual(1200.0);
+        existingRentCategory.setTransactionIds(Arrays.asList("rent_trans_1"));
+        existingRentCategory.setBudgetId(1L);
+        existingRentCategory.setIsActive(true);
+
+        TransactionCategory existingGroceriesCategory = new TransactionCategory();
+        existingGroceriesCategory.setCategoryName("Groceries");
+        existingGroceriesCategory.setStartDate(LocalDate.of(2024, 11, 1));
+        existingGroceriesCategory.setEndDate(LocalDate.of(2024, 11, 8));
+        existingGroceriesCategory.setBudgetedAmount(200.0);
+        existingGroceriesCategory.setBudgetActual(150.0);
+        existingGroceriesCategory.setTransactionIds(Arrays.asList("grocery_trans_1", "grocery_trans_2"));
+        existingGroceriesCategory.setBudgetId(1L);
+        existingGroceriesCategory.setIsActive(true);
+
+        List<TransactionCategory> existingCategories = Arrays.asList(
+                existingRentCategory,
+                existingGroceriesCategory
+        );
+
+        // Execute
+        List<TransactionCategory> result = budgetCategoryBuilder.updateTransactionCategories(
+                categoryPeriods,
+                existingCategories
+        );
+
+        // Verify
+        assertEquals(2, result.size()); // Should only have 2 categories since they're merged
+
+        // Verify Groceries category was merged correctly
+        Optional<TransactionCategory> mergedGroceries = result.stream()
+                .filter(tc -> tc.getCategoryName().equals("Groceries"))
+                .findFirst();
+
+        assertTrue(mergedGroceries.isPresent());
+        TransactionCategory groceriesResult = mergedGroceries.get();
+        assertEquals(235.0, groceriesResult.getBudgetActual()); // 150 + 85
+        assertEquals(3, groceriesResult.getTransactionIds().size()); // All 3 transaction IDs
+        assertTrue(groceriesResult.getTransactionIds().containsAll(Arrays.asList(
+                "grocery_trans_1", "grocery_trans_2", "grocery_trans_3")));
+
+        // Verify Rent category was merged correctly
+        Optional<TransactionCategory> mergedRent = result.stream()
+                .filter(tc -> tc.getCategoryName().equals("Rent"))
+                .findFirst();
+
+        assertTrue(mergedRent.isPresent());
+        TransactionCategory rentResult = mergedRent.get();
+        assertEquals(2000.0, rentResult.getBudgetActual()); // 1200 + 800
+        assertEquals(2, rentResult.getTransactionIds().size()); // Both transaction IDs
+        assertTrue(rentResult.getTransactionIds().containsAll(Arrays.asList(
+                "rent_trans_1", "rent_trans_2")));
+    }
+
+
+    @Test
+    void testBuildTransactionCategoryList_whenCategoryPeriodsIsNull_thenReturnEmptyList(){
+       Budget budget = new Budget(1L, new BigDecimal("320"), new BigDecimal("120"), 1L, "Test Budget", "Test Budget", LocalDate.of(2024, 11, 1), LocalDate.of(2024, 11, 30), LocalDateTime.now());
+       List<TransactionCategory> actual = budgetCategoryBuilder.buildTransactionCategoryList(null, budget);
+       assertEquals(0, actual.size());
+       assertTrue(actual.isEmpty());
+    }
+
+    @Test
+    void testBuildTransactionCategoryList_whenCategoryPeriodsValid_thenReturnTransactionCategoryList() {
+        // Setup date ranges
+        DateRange dateRange1 = new DateRange(LocalDate.of(2024, 11, 1), LocalDate.of(2024, 11, 8));
+        DateRange dateRange2 = new DateRange(LocalDate.of(2024, 11, 8), LocalDate.of(2024, 11, 15));
+
+        // Setup CategoryPeriods
+        CategoryPeriod groceriesCategoryPeriod = new CategoryPeriod("Groceries", List.of(dateRange1, dateRange2), 1L, true);
+        groceriesCategoryPeriod.setBudgetForDateRange(dateRange1, 200.0);
+        groceriesCategoryPeriod.setBudgetForDateRange(dateRange2, 250.0);
+        groceriesCategoryPeriod.setCategoryActualAmountForDateRange(dateRange1, 150.0);
+        groceriesCategoryPeriod.setCategoryActualAmountForDateRange(dateRange2, 200.0);
+        groceriesCategoryPeriod.setTransactions(Arrays.asList(
+                new Transaction("acc1", new BigDecimal("150.00"), "USD", Arrays.asList("Groceries"), "cat1",
+                        LocalDate.of(2024, 11, 3), "desc", "merchant", "name", false, "grocery_trans_1",
+                        null, null, LocalDate.of(2024, 11, 3)),
+                new Transaction("acc1", new BigDecimal("200.00"), "USD", Arrays.asList("Groceries"), "cat1",
+                        LocalDate.of(2024, 11, 10), "desc", "merchant", "name", false, "grocery_trans_2",
+                        null, null, LocalDate.of(2024, 11, 10))
+        ));
+
+        // Setup Budget
+        Budget budget = new Budget();
+        budget.setId(1L);
+        budget.setStartDate(LocalDate.of(2024, 11, 1));
+        budget.setEndDate(LocalDate.of(2024, 11, 15));
+
+        List<CategoryPeriod> categoryPeriods = List.of(groceriesCategoryPeriod);
+
+        // Execute
+        List<TransactionCategory> result = budgetCategoryBuilder.buildTransactionCategoryList(
+                categoryPeriods, budget);
+
+        // Verify
+        assertFalse(result.isEmpty());
+        assertEquals(2, result.size());  // Should create one category per date range
+
+        // Verify first period
+        TransactionCategory firstPeriod = result.get(0);
+        assertEquals("Groceries", firstPeriod.getCategoryName());
+        assertEquals(LocalDate.of(2024, 11, 1), firstPeriod.getStartDate());
+        assertEquals(LocalDate.of(2024, 11, 8), firstPeriod.getEndDate());
+        assertEquals(200.0, firstPeriod.getBudgetedAmount());
+        assertEquals(150.0, firstPeriod.getBudgetActual());
+        assertEquals(1L, firstPeriod.getBudgetId());
+        assertTrue(firstPeriod.getIsActive());
+        assertFalse(firstPeriod.isOverSpent());
+        assertEquals(0.0, firstPeriod.getOverSpendingAmount());
+
+        // Verify second period
+        TransactionCategory secondPeriod = result.get(1);
+        assertEquals("Groceries", secondPeriod.getCategoryName());
+        assertEquals(LocalDate.of(2024, 11, 8), secondPeriod.getStartDate());
+        assertEquals(LocalDate.of(2024, 11, 15), secondPeriod.getEndDate());
+        assertEquals(250.0, secondPeriod.getBudgetedAmount());
+        assertEquals(200.0, secondPeriod.getBudgetActual());
+        assertEquals(1L, secondPeriod.getBudgetId());
+        assertTrue(secondPeriod.getIsActive());
+        assertFalse(secondPeriod.isOverSpent());
+        assertEquals(0.0, secondPeriod.getOverSpendingAmount());
+    }
+
+    private void verifyDateRanges(List<DateRange> actual, List<DateRange> expected) {
+        assertEquals(expected.size(), actual.size(), "Date range size mismatch");
+        for (int i = 0; i < expected.size(); i++) {
+            assertEquals(expected.get(i).getStartDate(), actual.get(i).getStartDate(),
+                    "Start date mismatch at index " + i);
+            assertEquals(expected.get(i).getEndDate(), actual.get(i).getEndDate(),
+                    "End date mismatch at index " + i);
         }
     }
 
-    @Test
-    void testLinkToCategoryToTransactions_whenOverlappingDateRangeBeforeStartDateAndBeforeEndDate_thenReturnTransactionLink(){
-        List<Transaction> transactions = new ArrayList<>();
-        Transaction walmartTransaction = createTransactionExample(LocalDate.of(2024, 8, 30), List.of("Groceries", "Shops"), "19047000", "PIN Purchase WALMART", "WALMART", "WALMART", new BigDecimal("45"));
-        transactions.add(walmartTransaction);
-        DateRange dateRange = new DateRange(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8));
-        Long userId = 1L;
+//    @Test
+//    void testInitializeUserBudgetCategories_SeptMockData_returnDateRanges()
+//    {
+//        Budget budget = new Budget();
+//        budget.setBudgetAmount(new BigDecimal("3070"));
+//        budget.setBudgetName("Savings Plan");
+//        budget.setActual(new BigDecimal("1609"));
+//        budget.setStartDate(LocalDate.of(2024, 9, 1));
+//        budget.setEndDate(LocalDate.of(2024, 9, 30));
+//        budget.setUserId(1L);
+//
+//        BudgetPeriod budgetPeriod = new BudgetPeriod(Period.WEEKLY, LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 30));
+//
+//        List<Transaction> transactions = new ArrayList<>();
+//        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 1), List.of("Supermarkets and Groceries"), "19047000", "PIN Purchase WINCO", "WINCO", "WINCO", new BigDecimal("35.23")));
+//        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 3), List.of("Supermarkets and Groceries"), "19047000", "PIN Purchase WINCO", "WINCO", "WINCO", new BigDecimal("35.23")));
+//        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 4), List.of("Gas Stations"), "22009000", "PIN Purchase MAVERICK", "MAVERICK", "MAVERICK", new BigDecimal("31.55")));
+//        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 5), List.of("Subscription"), "18061000", "AFFIRM Purchase", "AFFIRM", "AFFIRM", new BigDecimal("19.23")));
+//        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 8), List.of("Subscription"), "18061000", "AFFIRM Purchase", "AFFIRM", "AFFIRM", new BigDecimal("10.00")));
+//        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 15), List.of("Subscription"), "18061000", "Spotify", "Spotify", "Spotify", new BigDecimal("12.57")));
+//        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 15), List.of("Supermarkets and Groceries"), "19047000", "PIN Purchase WINCO", "WINCO", "WINCO", new BigDecimal("16.23")));
+//        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 15), List.of("Supermarkets and Groceries"), "19047000", "Pin Purchase HARMONS", "HARMONS", "HARMONS", new BigDecimal("7.89")));
+//        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 20), List.of("Gas Stations"), "22009000", "PIN Purchase MAVERICK", "MAVERICK", "MAVERICK", new BigDecimal("35.23")));
+//        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 25), List.of("Supermarkets and Groceries"), "19047000", "PIN Purchase WINCO", "WINCO", "WINCO", new BigDecimal("17.89")));
+//        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 27), List.of("Subscription"), "18061000", "AFFIRM Purchase", "AFFIRM", "AFFIRM", new BigDecimal("31.00")));
+//        transactions.add(createTransactionExample(LocalDate.of(2024, 9, 30), List.of("Gas Stations"), "22009000", "PIN Purchase MAVERICK", "MAVERICK", "MAVERICK", new BigDecimal("24.56")));
+//
+//        List<CategorySpending> mockCategorySpendingList = new ArrayList<>();
+//        mockCategorySpendingList.add(new CategorySpending("19047000", "Supermarkets and Groceries", new BigDecimal("112.47")));
+//        mockCategorySpendingList.add(new CategorySpending("19047000", "Gas Stations", new BigDecimal("91.34")));
+//        mockCategorySpendingList.add(new CategorySpending("18061000", "Subscription", new BigDecimal("72.8")));
+//
+//        Map<String, BigDecimal> mockCategoryToBudgetMap = new HashMap<>();
+//        mockCategoryToBudgetMap.put("Supermarkets and Groceries", new BigDecimal("200"));
+//        mockCategoryToBudgetMap.put("Gas Stations", new BigDecimal("100"));
+//        mockCategoryToBudgetMap.put("Subscription", new BigDecimal("120"));
+//
+//        Map<String, List<DateRange>> categoryPeriods = new HashMap<>();
+//        categoryPeriods.put("Supermarkets and Groceries", List.of(
+//                new DateRange(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8)),   // Covers transactions on Sept 1, 3
+//                new DateRange(LocalDate.of(2024, 9, 15), LocalDate.of(2024, 9, 22)), // Covers transactions on Sept 15
+//                new DateRange(LocalDate.of(2024, 9, 25), LocalDate.of(2024, 9, 27))  // Covers transaction on Sept 25
+//        ));
+//
+//        categoryPeriods.put("Gas Stations", List.of(
+//                new DateRange(LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8)),   // Covers transaction on Sept 4
+//                new DateRange(LocalDate.of(2024, 9, 15), LocalDate.of(2024, 9, 20)), // Covers transaction on Sept 20
+//                new DateRange(LocalDate.of(2024, 9, 30), LocalDate.of(2024, 9, 30))  // Covers transaction on Sept 30
+//        ));
+//
+//        categoryPeriods.put("Subscription", List.of(
+//                new DateRange(LocalDate.of(2024, 9, 5), LocalDate.of(2024, 9, 8)),   // Covers transactions on Sept 5, 8
+//                new DateRange(LocalDate.of(2024, 9, 15), LocalDate.of(2024, 9, 27))  // Covers transactions on Sept 15, 27
+//        ));
+//
+//        when(categoryService.getCategoryIdByName("Supermarkets and Groceries")).thenReturn(Optional.of("19047000"));
+//        when(categoryService.getCategoryIdByName("Gas Stations")).thenReturn(Optional.of("19047000"));
+//        when(categoryService.getCategoryIdByName("Subscription")).thenReturn(Optional.of("18061000"));
+//
+//        doReturn(categoryPeriods).when(budgetCategoryBuilder)
+//                .createCategoryPeriods(anyString(), any(LocalDate.class), any(LocalDate.class), any(Period.class), anyList());
+//
+//        when(budgetCalculator.createCategoryToBudgetMap(anyList(), any(Budget.class), any(BigDecimal.class), any(BudgetPeriod.class)))
+//                .thenReturn(mockCategoryToBudgetMap);
+//
+//
+//        List<TransactionCategory> expectedBudgetCategories = new ArrayList<>();
+//        expectedBudgetCategories.add(createUserBudgetCategory(
+//                "19047000", "Supermarkets and Groceries", 200.0, 112.47,
+//                LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8), 1L
+//        ));
+//        expectedBudgetCategories.add(createUserBudgetCategory(
+//                "19047000", "Supermarkets and Groceries", 200.0, 112.47,
+//                LocalDate.of(2024, 9, 15), LocalDate.of(2024, 9, 22), 1L
+//        ));
+//        expectedBudgetCategories.add(createUserBudgetCategory(
+//                "19047000", "Supermarkets and Groceries", 200.0, 112.47,
+//                LocalDate.of(2024, 9, 25), LocalDate.of(2024, 9, 27), 1L
+//        ));
+//
+//// Adding expected UserBudgetCategory entries for "Gas Stations"
+//        expectedBudgetCategories.add(createUserBudgetCategory(
+//                "22009000", "Gas Stations", 100.0, 91.34,
+//                LocalDate.of(2024, 9, 1), LocalDate.of(2024, 9, 8), 1L
+//        ));
+//        expectedBudgetCategories.add(createUserBudgetCategory(
+//                "22009000", "Gas Stations", 100.0, 91.34,
+//                LocalDate.of(2024, 9, 15), LocalDate.of(2024, 9, 20), 1L
+//        ));
+//        expectedBudgetCategories.add(createUserBudgetCategory(
+//                "22009000", "Gas Stations", 100.0, 91.34,
+//                LocalDate.of(2024, 9, 30), LocalDate.of(2024, 9, 30), 1L
+//        ));
+//
+//// Adding expected UserBudgetCategory entries for "Subscription"
+//        expectedBudgetCategories.add(createUserBudgetCategory(
+//                "18061000", "Subscription", 120.0, 72.8,
+//                LocalDate.of(2024, 9, 5), LocalDate.of(2024, 9, 8), 1L
+//        ));
+//        expectedBudgetCategories.add(createUserBudgetCategory(
+//                "18061000", "Subscription", 120.0, 72.8,
+//                LocalDate.of(2024, 9, 15), LocalDate.of(2024, 9, 27), 1L
+//        ));
+//
+//        List<TransactionCategory> actual = budgetCategoryBuilder.initializeTransactionCategories(budget, budgetPeriod, transactions);
+//        for(int i = 0; i < expectedBudgetCategories.size(); i++)
+//        {
+//            TransactionCategory expected = expectedBudgetCategories.get(i);
+//            TransactionCategory actualCategory = actual.get(i);
+//
+//            // Log category information before the assertions
+//            System.out.println("Comparing category: " + expected.getCategoryName());
+//            System.out.println("Expected Budget Actual: " + expected.getBudgetActual() + ", Actual Budget Actual: " + actualCategory.getBudgetActual());
+//            System.out.println("Expected Budgeted Amount: " + expected.getBudgetedAmount() + ", Actual Budgeted Amount: " + actualCategory.getBudgetedAmount());
+//            System.out.println("Expected Start Date: " + expected.getStartDate() + ", Actual Start Date: " + actualCategory.getStartDate());
+//            System.out.println("Expected End Date: " + expected.getEndDate() + ", Actual End Date: " + actualCategory.getEndDate());
+//
+//            // Perform assertions
+//            assertEquals(expected.getBudgetActual(), actualCategory.getBudgetActual(), "Budget actual does not match for category: " + expected.getCategoryName());
+//            assertEquals(expected.getBudgetedAmount(), actualCategory.getBudgetedAmount(), "Budgeted amount does not match for category: " + expected.getCategoryName());
+//            assertEquals(expected.getStartDate(), actualCategory.getStartDate(), "Start date does not match for category: " + expected.getCategoryName());
+//            assertEquals(expected.getEndDate(), actualCategory.getEndDate(), "End date does not match for category: " + expected.getCategoryName());
+//        }
+//
+//    }
 
-        Map<String, List<String>> finalizedTransactionCategories = new HashMap<>();
-        finalizedTransactionCategories.put("Groceries", List.of(walmartTransaction.getTransactionId()));
-        when(categoryRuleEngine.finalizeUserTransactionCategoriesForDateRange(anyList(), eq(userId), eq(dateRange)))
-                .thenReturn(finalizedTransactionCategories);
 
-        // Act
-        ArrayList<TransactionLink> actual = budgetCategoryBuilder.linkCategoryToTransactionsByDateRange(transactions, dateRange, userId);
+//    @Test
+//    void testCreateCategorySpendingList_returnCategorySpendingList(){
+//        List<String> categories = new ArrayList<>();
+//        categories.add("Groceries");
+//        categories.add("Gas");
+//        categories.add("Payments");
+//
+//        List<Transaction> transactions = new ArrayList<>();
+//        transactions.add(createAffirmTransaction());
+//        transactions.add(createWalmartTransaction());
+//        transactions.add(createGasTransaction());
+//
+//        List<CategorySpending> expectedCategorySpending = new ArrayList<>();
+//
+//        Mockito.when(categoryService.getCategoryIdByName("Payments")).thenReturn(Optional.of("cat-005"));
+//        Mockito.when(categoryService.getCategoryIdByName("Gas")).thenReturn(Optional.of("cat-003"));
+//        Mockito.when(categoryService.getCategoryIdByName("Groceries")).thenReturn(Optional.of("cat-001"));
+//
+//        expectedCategorySpending.add(new CategorySpending("cat-001","Groceries", new BigDecimal("50.75")));
+//        expectedCategorySpending.add(new CategorySpending("cat-003", "Gas", new BigDecimal("50.75")));
+//        expectedCategorySpending.add(new CategorySpending("cat-005","Payments", new BigDecimal("50.75")));
+//
+//        List<CategorySpending> actual = budgetCategoryBuilder.createCategorySpendingList(categories, transactions);
+//        for(int i = 0; i < expectedCategorySpending.size(); i++)
+//        {
+//            assertEquals(expectedCategorySpending.get(i).getCategoryName(), actual.get(i).getCategoryName());
+//            assertEquals(expectedCategorySpending.get(i).getCategoryId(), actual.get(i).getCategoryId());
+//            assertEquals(expectedCategorySpending.get(i).getActualSpending(), actual.get(i).getActualSpending());
+//        }
+//        assertEquals(expectedCategorySpending.size(), actual.size());
+//    }
+//
 
-        // Assert
-        assertEquals(1, actual.size(), "Should return one transaction link for overlapping date.");
-        assertEquals("Groceries", actual.get(0).getCategory());
-        assertEquals(walmartTransaction.getTransactionId(), actual.get(0).getTransactionId());
-    }
-
-    @Test
-    void testLinkCategoryToTransactions_whenFinalizedTransactionCategory_CategoryIsNull_thenThrowException(){
-
-    }
 
 
     private RecurringTransaction createWalmartRecurringTransaction() {
